--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/jpg" href="images/avatar.jpeg"/>
+
 		
 	</head>
 	<body class="is-preload">
@@ -13,8 +15,10 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Alpere Bekçi</a></h1>
+					
 					<p>Software Test Engineer<br/></p>
 				</header>
+
 				<!--<ul class="icons">
 					<li><a  href="#" id="tr" class="flag flag-us translate"><span class="label"> Turkish</span></a></li>
 					<li><a href="#" id="en" class="flag flag-turkey translate"><span class="label">English</span></a></li>
